SERVER-48993 explodeForSort can produce incorrect query plan

(cherry picked from commit 7dd37622622362d0ef689b91de565c8c053c838e)